// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridText /> Should render with background 1`] = `
.c4 {
  color: #FFFFFF;
  font-size: 5.6rem;
  text-transform: uppercase;
}

.c9 {
  color: #FFFFFF;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  font-size: 1.6rem;
}

.c2 .c5 {
  margin-bottom: 6.4rem;
}

.c7 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c8 .c3 {
  position: relative;
  left: 5rem;
  margin-bottom: 15px;
}

.c8 .c3::before {
  counter-increment: grid-counter;
  content: counter(grid-counter);
  position: absolute;
  top: -2rem;
  font-size: 5.6rem;
  left: -5rem;
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c7 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
    id="id-6267-506403265062"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3 c4"
        >
          Um title qualquer
        </h2>
        <div
          class="c5 c6"
        >
          Quis voluptate culpa dolor mollit minim non et.
    Veniam dolore amet exercitation non labore esse laborum. Aute
    nulla voluptate exercitation consectetur. Excepteur non et
    amet commodo irure. Eiusmod veniam laborum deserunt enim quis
    laborum cupidatat deserunt adipisicing id deserunt aute mollit
    culpa.
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 1
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 2
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 3
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridText /> Should render with default values 1`] = `
.c4 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

.c9 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  font-size: 1.6rem;
}

.c2 .c5 {
  margin-bottom: 6.4rem;
}

.c7 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c8 .c3 {
  position: relative;
  left: 5rem;
  margin-bottom: 15px;
}

.c8 .c3::before {
  counter-increment: grid-counter;
  content: counter(grid-counter);
  position: absolute;
  top: -2rem;
  font-size: 5.6rem;
  left: -5rem;
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c7 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
    id="id-6478-419044838526"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3 c4"
        >
          Um title qualquer
        </h2>
        <div
          class="c5 c6"
        >
          Quis voluptate culpa dolor mollit minim non et.
    Veniam dolore amet exercitation non labore esse laborum. Aute
    nulla voluptate exercitation consectetur. Excepteur non et
    amet commodo irure. Eiusmod veniam laborum deserunt enim quis
    laborum cupidatat deserunt adipisicing id deserunt aute mollit
    culpa.
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 1
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 2
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 3
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridText /> Should render with grid 1`] = `
.c4 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

.c9 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  font-size: 1.6rem;
}

.c2 .c5 {
  margin-bottom: 6.4rem;
}

.c7 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c8 .c3 {
  position: relative;
  left: 5rem;
  margin-bottom: 15px;
}

.c8 .c3::before {
  counter-increment: grid-counter;
  content: counter(grid-counter);
  position: absolute;
  top: -2rem;
  font-size: 5.6rem;
  left: -5rem;
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c7 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
    id="id-4172-924080321721"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3 c4"
        >
          Um title qualquer
        </h2>
        <div
          class="c5 c6"
        >
          Quis voluptate culpa dolor mollit minim non et.
    Veniam dolore amet exercitation non labore esse laborum. Aute
    nulla voluptate exercitation consectetur. Excepteur non et
    amet commodo irure. Eiusmod veniam laborum deserunt enim quis
    laborum cupidatat deserunt adipisicing id deserunt aute mollit
    culpa.
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 1
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 2
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 3
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridText /> Should render with no background 1`] = `
.c4 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

.c9 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  font-size: 1.6rem;
}

.c2 .c5 {
  margin-bottom: 6.4rem;
}

.c7 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c8 .c3 {
  position: relative;
  left: 5rem;
  margin-bottom: 15px;
}

.c8 .c3::before {
  counter-increment: grid-counter;
  content: counter(grid-counter);
  position: absolute;
  top: -2rem;
  font-size: 5.6rem;
  left: -5rem;
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

@media (max-width:768px) {
  .c4 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c7 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
    id="id-9477-080368625155"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3 c4"
        >
          Um title qualquer
        </h2>
        <div
          class="c5 c6"
        >
          Quis voluptate culpa dolor mollit minim non et.
    Veniam dolore amet exercitation non labore esse laborum. Aute
    nulla voluptate exercitation consectetur. Excepteur non et
    amet commodo irure. Eiusmod veniam laborum deserunt enim quis
    laborum cupidatat deserunt adipisicing id deserunt aute mollit
    culpa.
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 1
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 2
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
          <div
            class="c8"
          >
            <h3
              class="c3 c9"
            >
              Title 3
            </h3>
            <div
              class="c5 c6"
            >
              Quis voluptate culpa dolor mollit minim non et.
            Veniam dolore amet exercitation non labore esse laborum. Aute
            nulla voluptate exercitation consectetur. Excepteur non et
            amet commodo irure. Eiusmod veniam laborum deserunt enim quis
            laborum cupidatat deserunt adipisicing id deserunt aute mollit
            culpa.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridText /> Should render with no grid 1`] = `
.c3 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

.c5 {
  font-size: 1.6rem;
}

.c2 .c4 {
  margin-bottom: 6.4rem;
}

.c6 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

@media (max-width:768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c6 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
    id="id-4061-6228667964215"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Um title qualquer
        </h2>
        <div
          class="c4 c5"
        >
          Quis voluptate culpa dolor mollit minim non et.
    Veniam dolore amet exercitation non labore esse laborum. Aute
    nulla voluptate exercitation consectetur. Excepteur non et
    amet commodo irure. Eiusmod veniam laborum deserunt enim quis
    laborum cupidatat deserunt adipisicing id deserunt aute mollit
    culpa.
        </div>
        <div
          class="c6"
        />
      </div>
    </div>
  </div>
</div>
`;
